--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,15 +41,17 @@ dependencies:
   camera: ^0.10.3+2
   google_maps_flutter: ^2.2.5
   location: ^4.4.0
-  firebase_core: ^2.7.1
-  firebase_auth: ^4.2.6
-  cloud_firestore: ^4.3.2
   provider: ^6.0.5
-
+  geolocator: ^9.0.2
+  cloud_firestore: ^4.8.1
+  firebase_auth: ^4.6.3
+  firebase_core: ^2.14.0
+  email_validator: ^2.1.17
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -72,7 +74,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
       - assets/images/logo.png
-  #   - images/a_dot_ham.jpeg
+      - assets/images/plant1.jpg
+      - assets/images/plant2.jpg
+      - assets/images/plant3.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
